# OpenPI-GPU

./: .env.example  .gitignore  CHANGES.md  DISPATCH_PROFILE.md  FINDINGS.md  H2D_SPLIT.md  MULTIHOST_VALIDATION.md  Makefile  NOTICE  PLAN.md  README.md  SHARDER.md  STEP_BREAKDOWN.md  TRAIN_LOOP_BREAKDOWN.md  TRAIN_LOOP_SCALING.md  pyproject.toml
.github/workflows/: demo.yml
demo/: README.md  index.html
demo/runs/: master_3xh100.jsonl
docs/: ARCHITECTURE.md  CHECKPOINTS.md  ROADMAP.md  index.html
examples/: quickstart.py
scripts/: demo_fault_tolerance.py  demo_fault_tolerance_test.py  demo_sharder.py  demo_sharder_test.py  elastic_launch.py  elastic_launch_test.py  fsdp_xla_flags.sh  gpu_breakdown.sh  launch_local.py  plot_results.py  profile_attention.py  profile_dispatch.py  profile_fsdp.py  profile_h2d.py  profile_step_breakdown.py  profile_train_loop.py  scaling_study.py  scaling_study_test.py  serve_policy.py  train.py
src/openpi/models/: gemma.py  model.py  pi0.py  pi0_config.py  pi0_flash_test.py
src/openpi/training/: attribution.py  attribution_test.py  checkpoints.py  data_loader.py  data_parity_test.py  data_sharding.py  data_sharding_test.py  distributed.py  distributed_test.py  droid_rlds_dataset.py  profiling.py  profiling_test.py
src/openpi_jax/: __init__.py
src/openpi_jax/models/: __init__.py  action_expert.py  gemma.py  observation.py  pi0.py  pi0_fast.py  siglip.py  tokenizer.py
src/openpi_jax/policies/: __init__.py  policy.py  serve.py
src/openpi_jax/shared/: __init__.py  normalize.py  typing.py
src/openpi_jax/training/: __init__.py  checkpoints.py  config.py  optimizer.py  sharding.py  train.py
src/openpi_jax/transforms/: __init__.py  base.py
tests/: test_smoke.py
