[project]
name = "openpi-jax"
version = "0.1.0"
description = "A from-scratch JAX/Flax recreation of OpenPI — π0 / π0-FAST vision-language-action models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Arjun Virk", email = "arjun@bracketbot.com" }]
keywords = ["jax", "flax", "robotics", "vla", "flow-matching", "pi0", "openpi"]

dependencies = [
    "jax>=0.4.34",
    "flax>=0.10.0",
    "optax>=0.2.3",
    "orbax-checkpoint>=0.6.0",
    "einops>=0.8.0",
    "numpy>=1.26",
    "sentencepiece>=0.2.0",
    "pillow>=10.0",
    "tqdm>=4.66",
    "tyro>=0.8.0",
    "ml-collections>=0.1.1",
]

[project.optional-dependencies]
# GPU/TPU JAX is installed via the appropriate jax[cuda12]/jax[tpu] extra.
cuda = ["jax[cuda12]>=0.4.34"]
tpu = ["jax[tpu]>=0.4.34"]
data = ["lerobot>=0.1.0", "tensorflow-datasets>=4.9", "tensorflow-cpu>=2.15"]
serve = ["websockets>=12.0", "msgpack>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.6.0", "pre-commit>=3.7", "chex>=0.1.86"]

[project.scripts]
openpi-train = "openpi_jax.training.train:main"
openpi-serve = "openpi_jax.policies.serve:main"

[project.urls]
Homepage = "https://github.com/virkvarjun/OpenPI-JAX-"
Repository = "https://github.com/virkvarjun/OpenPI-JAX-"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openpi_jax"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
